[package]
name = "table_ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
egui_plot = "0.25.0"
image = "0.24.8"
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect" }
rfd = "0.13.0"
iter_tools = "0.4.0"
rayon = "1.8.1"
egui_extras = "0.25.0"
imageproc = "0.23.0"
