[package]
name = "table_ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect", branch = "0_28" }
egui_plot = "0.28"
egui_extras = "0.28"
rfd = "0.14"
iter_tools = "0.20"
rayon = "1.10"
imageproc = "0.25"
image = "0.25"
